# libds

./: .clangd  .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: CI.yml
include/: ds.h
include/ds/: darray.h  list.h
include/ds/__priv/: cdefs.h
src/: darray.c  list.c  meson.build
test/: darray.c  list.c  meson.build
test/shared/: xmalloc.c  xmalloc.h
